--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
       <div class="bar-chart">
         <h1>Bar chart</h1>
-        <svg style="background: gainsboro" id="bar"></svg>
-        <button id="sort">Sort</button>
+        <div id="chart"></div>
+        <button id="selection-sort">Selection Sort</button>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
