--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Sorting Visualizer</h1>
+    <button id="random-data">Generate Random Data</button>
     <div class="container">
       <div class="bar-chart">
-        <h1>Bar chart</h1>
         <div id="chart"></div>
-        <button id="selection-sort">Selection Sort</button>
+        <hr />
+        <button id="selection-sort">Sort</button>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
