added traversing and smallest element color animation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="selection-sort">Sort</button>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="function.js"></script>
   </body>
 </html>
