Modified ui and code refactored

--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             checked
           />Bubble Sort</label
         >
+        <br />
+        <br />
+        <label>
+          Speed:
+          <input
+            type="range"
+            id="speed"
+            name="speed"
+            min="100"
+            max="1000"
+            onchange="setSpeed()"
+          />
+        </label>
       </form>
     </div>
     <div class="container">
