Added stop button and fixed some issue with generating new data while sorting

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div id="chart"></div>
         <hr />
         <button id="sort">Sort</button>
+        <button id="stop" class="none stop">Stop</button>
       </div>
     </div>
     <script src="https://d3js.org/d3.v4.min.js"></script>
