Added merge sort without color correction on the bar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             value="selection-sort"
           />Selection Sort</label
         >
+        <label>
+          <input type="radio" name="algo-name" value="merge-sort" />Merge
+          Sort</label
+        >
 
         <br />
         <br />
