--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
             value="selection-sort"
           />Selection Sort</label
         >
-        <label>
+        <!---  <label>
           <input type="radio" name="algo-name" value="merge-sort" />Merge
           Sort</label
-        >
+        > --->
+       
 
         <br />
         <br />
