--- a/index.html
+++ b/index.html
@@ -9,52 +9,96 @@
       content="Sorting algorithm visualizer using D3js. It will help you to understand the algorithm. I've used swapping animation for clear understanding of the algorithm."
     />
     <title>Sorting Algorithm Visualizer | Najmul H. Bappy</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css"
+      integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">Algo Visualizer</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href=""
+                  >Sorting Algo <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./searching-algorithm/"
+                  >Searching Algo</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <p class="sound"><a id="sound" href="#">Sound 🎵</a></p>
-    <h1>Sorting Algorithm Visualizer</h1>
-    <button id="random-data">Generate Random Data</button>
-    <div class="radio">
-      <form action="">
-        <label
-          ><input
-            type="radio"
-            name="algo-name"
-            value="bubble-sort"
-            checked
-          />Bubble Sort</label
-        >
-        <label>
-          <input
-            type="radio"
-            name="algo-name"
-            value="selection-sort"
-          />Selection Sort</label
-        >
-        <!---  <label>
-          <input type="radio" name="algo-name" value="merge-sort" />Merge
-          Sort</label
-        > --->
-
-        <br />
-        <br />
-        <label>
-          Speed:
-          <input
-            type="range"
-            id="speed"
-            name="speed"
-            min="100"
-            max="800"
-            value="300"
-            onchange="setSpeed()"
-          />
-        </label>
-      </form>
-      <button id="sort">Sort</button>
-      <button id="stop" class="none stop">Stop</button>
+    <div class="container">
+      <h2>Searching Algorithm Visualizer</h2>
     </div>
+
+    <br />
+    <div class="container">
+      <div class="form-inline">
+        <div class="form-group">
+          <select class="form-control" id="get-algo">
+            <option value="bubble-sort">Bubble Sort</option>
+            <option value="selection-sort">Selection Sort</option>
+          </select>
+        </div>
+
+        <div class="form-group mx-sm-3">
+          <button class="btn btn-primary" id="sort">Sort</button>
+        </div>
+        <div class="form-group">
+          <button class="btn none btn-danger" id="stop">Stop</button>
+        </div>
+      </div>
+      <br />
+      <br />
+
+      <div class="row">
+        <div class="col-md-3">
+          <button class="btn btn-info" id="random-data">
+            Generate Random Data
+          </button>
+        </div>
+        <div class="col-md-3">
+          <label>
+            Speed:
+            <input
+              type="range"
+              id="speed"
+              name="speed"
+              min="100"
+              max="800"
+              value="300"
+              onchange="setSpeed()"
+            />
+          </label>
+        </div>
+      </div>
+    </div>
+
     <div class="container">
       <div class="bar-chart">
         <div id="chart"></div>
