--- a/searching-algorithm/index.html
+++ b/searching-algorithm/index.html
@@ -6,55 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Sorting algorithm visualizer using D3js. It will help you to understand the algorithm. I've used swapping animation for clear understanding of the algorithm."
+      content="Algorithm visualizer using D3js. It will help you to understand the algorithm. I've used swapping animation for clear understanding of the algorithm."
     />
-    <title>Sorting Algorithm Visualizer | Najmul H. Bappy</title>
+    <title>Algorithm Visualizer | Najmul H. Bappy</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css"
+      integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">Algo Visualizer</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Sorting Algo </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Searching Algo</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <p class="sound"><a id="sound" href="#">Sound 🎵</a></p>
-    <h1>Sorting Algorithm Visualizer</h1>
-    <button id="random-data">Generate Random Data</button>
-    <div class="radio">
-      <form action="">
-        <label
-          ><input
-            type="radio"
-            name="algo-name"
-            value="binary-search"
-            checked
-          />Binary Search</label
-        >
-        <label>
-          <input type="radio" name="algo-name" value="linear-search" />Linear
-          Search</label
-        >
-        <!---  <label>
-          <input type="radio" name="algo-name" value="merge-sort" />Merge
-          Sort</label
-        > --->
+    <div class="container">
+      <h2>Searching Algorithm Visualizer</h2>
+    </div>
 
-        <br />
-        <br />
-        <label>
-          Speed:
+    <br />
+    <div class="container">
+      <div class="form-inline">
+        <div class="form-group">
+          <select class="form-control" id="get-algo">
+            <option value="binary-search">Binary Search</option>
+            <option value="linear-search">Linear Search</option>
+          </select>
+        </div>
+        <div class="form-group mx-sm-3">
+          <label for="inputPassword2" class="sr-only">Password</label>
           <input
-            type="range"
-            id="speed"
-            name="speed"
-            min="100"
-            max="800"
-            value="300"
-            onchange="setSpeed()"
+            type="text"
+            class="form-control"
+            id="targetValue"
+            placeholder="Enter an element"
           />
-        </label>
-        <br /><br />
-        <label for="">
-          Search For
-          <input class="input-element" id="targetValue" type="text" />
-        </label>
-      </form>
-      <button id="search">Search</button>
+        </div>
+        <button class="btn btn-primary" id="search">Search</button>
+      </div>
+
+      <br />
+
+      <div class="row">
+        <div class="col-md-3">
+          <button class="btn btn-info" id="random-data">
+            Generate Random Data
+          </button>
+        </div>
+        <div class="col-md-3">
+          <label>
+            Speed:
+            <input
+              type="range"
+              id="speed"
+              name="speed"
+              min="100"
+              max="800"
+              value="300"
+              onchange="setSpeed()"
+            />
+          </label>
+        </div>
+      </div>
     </div>
     <div class="container">
       <div class="bar-chart">
