--- a/searching-algorithm/index.html
+++ b/searching-algorithm/index.html
@@ -22,7 +22,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="/">Algo Visualizer</a>
+          <a class="navbar-brand" href="./..">Algo Visualizer</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -37,7 +37,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/">Sorting Algo </a>
+                <a class="nav-link" href="./..">Sorting Algo </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Searching Algo</a>
