some small bugs

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <p class="sound"><a id="sound" href="#">Sound 🎵</a></p>
     <div class="container">
-      <h2>Searching Algorithm Visualizer</h2>
+      <h2>Sorting Algorithm Visualizer</h2>
     </div>
 
     <br />
