Update search algorithm by notification at bottom

--- a/searching-algorithm/index.html
+++ b/searching-algorithm/index.html
@@ -103,7 +103,7 @@
         <hr />
       </div>
     </div>
-    <div class="container foundNotice"></div>
+    <div id="foundNotice" class="container text-success text-center"></div>
 
     <footer>
       <div class="footer-text">
